# webgl2-wasm-pong

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json
html_template/: index.html
include/testProject/: module.h  render.h
src/: main.c  module.c  render.c
